// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/skeleton/demo/active.md correctly 1`] = `
<div
  class="ezd-skeleton ant-skeleton-active"
>
  <div
    class="ezd-skeleton-content"
  >
    <h3
      class="ezd-skeleton-title"
      style="width:38%"
    />
    <ul
      class="ezd-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/basic.md correctly 1`] = `
<div
  class="ezd-skeleton"
>
  <div
    class="ezd-skeleton-content"
  >
    <h3
      class="ezd-skeleton-title"
      style="width:38%"
    />
    <ul
      class="ezd-skeleton-paragraph"
    >
      <li />
      <li />
      <li
        style="width:61%"
      />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/children.md correctly 1`] = `
<div
  class="article"
>
  <div>
    <h4>
      EZ Design, a design language
    </h4>
    <p>
      We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
    </p>
  </div>
  <button
    class="ezd-btn"
    type="button"
  >
    <span>
      Show Skeleton
    </span>
  </button>
</div>
`;

exports[`renders ./components/skeleton/demo/complex.md correctly 1`] = `
<div
  class="ezd-skeleton ant-skeleton-with-avatar"
>
  <div
    class="ezd-skeleton-header"
  >
    <span
      class="ezd-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
    />
  </div>
  <div
    class="ezd-skeleton-content"
  >
    <h3
      class="ezd-skeleton-title"
      style="width:50%"
    />
    <ul
      class="ezd-skeleton-paragraph"
    >
      <li />
      <li />
      <li />
      <li />
    </ul>
  </div>
</div>
`;

exports[`renders ./components/skeleton/demo/element.md correctly 1`] = `
Array [
  <div
    class="ezd-space ant-space-horizontal ant-space-align-center"
  >
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <div
        class="ezd-skeleton ant-skeleton-element"
      >
        <span
          class="ezd-skeleton-button"
        />
      </div>
    </div>
    <div
      class="ezd-space-item"
      style="margin-right:8px"
    >
      <div
        class="ezd-skeleton ant-skeleton-element"
      >
        <span
          class="ezd-skeleton-avatar ant-skeleton-avatar-circle"
        />
      </div>
    </div>
    <div
      class="ezd-space-item"
    >
      <div
        class="ezd-skeleton ant-skeleton-element"
      >
        <span
          class="ezd-skeleton-input"
          style="width:200px"
        />
      </div>
    </div>
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-skeleton ant-skeleton-element"
  >
    <span
      class="ezd-skeleton-button"
    />
  </div>,
  <br />,
  <br />,
  <div
    class="ezd-skeleton ant-skeleton-element"
  >
    <div
      class="ezd-skeleton-image"
    >
      <svg
        class="ezd-skeleton-image-svg"
        viewBox="0 0 1098 1024"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="ezd-skeleton-image-path"
          d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z"
        />
      </svg>
    </div>
  </div>,
  <div
    class="ezd-divider ant-divider-horizontal"
    role="separator"
  />,
  <form
    class="ezd-form ant-form-inline"
    style="margin:16px 0"
  >
    <div
      class="ezd-row ant-form-item"
    >
      <div
        class="ezd-col ant-form-item-label"
      >
        <label
          class=""
          title="Active"
        >
          Active
        </label>
      </div>
      <div
        class="ezd-col ant-form-item-control"
      >
        <div
          class="ezd-form-item-control-input"
        >
          <div
            class="ezd-form-item-control-input-content"
          >
            <button
              aria-checked="false"
              class="ezd-switch"
              role="switch"
              type="button"
            >
              <div
                class="ezd-switch-handle"
              />
              <span
                class="ezd-switch-inner"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ezd-row ant-form-item"
    >
      <div
        class="ezd-col ant-form-item-label"
      >
        <label
          class=""
          title="Button Block"
        >
          Button Block
        </label>
      </div>
      <div
        class="ezd-col ant-form-item-control"
      >
        <div
          class="ezd-form-item-control-input"
        >
          <div
            class="ezd-form-item-control-input-content"
          >
            <button
              aria-checked="false"
              class="ezd-switch"
              role="switch"
              type="button"
            >
              <div
                class="ezd-switch-handle"
              />
              <span
                class="ezd-switch-inner"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ezd-row ant-form-item"
    >
      <div
        class="ezd-col ant-form-item-label"
      >
        <label
          class=""
          title="Size"
        >
          Size
        </label>
      </div>
      <div
        class="ezd-col ant-form-item-control"
      >
        <div
          class="ezd-form-item-control-input"
        >
          <div
            class="ezd-form-item-control-input-content"
          >
            <div
              class="ezd-radio-group ant-radio-group-outline"
            >
              <label
                class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
              >
                <span
                  class="ezd-radio-button ant-radio-button-checked"
                >
                  <input
                    checked=""
                    class="ezd-radio-button-input"
                    type="radio"
                    value="default"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Default
                </span>
              </label>
              <label
                class="ezd-radio-button-wrapper"
              >
                <span
                  class="ezd-radio-button"
                >
                  <input
                    class="ezd-radio-button-input"
                    type="radio"
                    value="large"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Large
                </span>
              </label>
              <label
                class="ezd-radio-button-wrapper"
              >
                <span
                  class="ezd-radio-button"
                >
                  <input
                    class="ezd-radio-button-input"
                    type="radio"
                    value="small"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Small
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ezd-row ant-form-item"
    >
      <div
        class="ezd-col ant-form-item-label"
      >
        <label
          class=""
          title="Button Shape"
        >
          Button Shape
        </label>
      </div>
      <div
        class="ezd-col ant-form-item-control"
      >
        <div
          class="ezd-form-item-control-input"
        >
          <div
            class="ezd-form-item-control-input-content"
          >
            <div
              class="ezd-radio-group ant-radio-group-outline"
            >
              <label
                class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
              >
                <span
                  class="ezd-radio-button ant-radio-button-checked"
                >
                  <input
                    checked=""
                    class="ezd-radio-button-input"
                    type="radio"
                    value="default"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Default
                </span>
              </label>
              <label
                class="ezd-radio-button-wrapper"
              >
                <span
                  class="ezd-radio-button"
                >
                  <input
                    class="ezd-radio-button-input"
                    type="radio"
                    value="round"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Round
                </span>
              </label>
              <label
                class="ezd-radio-button-wrapper"
              >
                <span
                  class="ezd-radio-button"
                >
                  <input
                    class="ezd-radio-button-input"
                    type="radio"
                    value="circle"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Circle
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ezd-row ant-form-item"
    >
      <div
        class="ezd-col ant-form-item-label"
      >
        <label
          class=""
          title="Avatar Shape"
        >
          Avatar Shape
        </label>
      </div>
      <div
        class="ezd-col ant-form-item-control"
      >
        <div
          class="ezd-form-item-control-input"
        >
          <div
            class="ezd-form-item-control-input-content"
          >
            <div
              class="ezd-radio-group ant-radio-group-outline"
            >
              <label
                class="ezd-radio-button-wrapper"
              >
                <span
                  class="ezd-radio-button"
                >
                  <input
                    class="ezd-radio-button-input"
                    type="radio"
                    value="square"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Square
                </span>
              </label>
              <label
                class="ezd-radio-button-wrapper ant-radio-button-wrapper-checked"
              >
                <span
                  class="ezd-radio-button ant-radio-button-checked"
                >
                  <input
                    checked=""
                    class="ezd-radio-button-input"
                    type="radio"
                    value="circle"
                  />
                  <span
                    class="ezd-radio-button-inner"
                  />
                </span>
                <span>
                  Circle
                </span>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
  </form>,
]
`;

exports[`renders ./components/skeleton/demo/list.md correctly 1`] = `
Array [
  <button
    aria-checked="false"
    class="ezd-switch"
    role="switch"
    type="button"
  >
    <div
      class="ezd-switch-handle"
    />
    <span
      class="ezd-switch-inner"
    />
  </button>,
  <div
    class="ezd-list ant-list-vertical ant-list-lg ant-list-split"
  >
    <div
      class="ezd-spin-nested-loading"
    >
      <div
        class="ezd-spin-container"
      >
        <ul
          class="ezd-list-items"
        >
          <li
            class="ezd-list-item ant-list-item-no-flex"
          >
            <div
              class="ezd-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ezd-skeleton-header"
              >
                <span
                  class="ezd-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ezd-skeleton-content"
              >
                <h3
                  class="ezd-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ezd-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="ezd-list-item ant-list-item-no-flex"
          >
            <div
              class="ezd-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ezd-skeleton-header"
              >
                <span
                  class="ezd-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ezd-skeleton-content"
              >
                <h3
                  class="ezd-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ezd-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
          <li
            class="ezd-list-item ant-list-item-no-flex"
          >
            <div
              class="ezd-skeleton ant-skeleton-with-avatar ant-skeleton-active"
            >
              <div
                class="ezd-skeleton-header"
              >
                <span
                  class="ezd-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"
                />
              </div>
              <div
                class="ezd-skeleton-content"
              >
                <h3
                  class="ezd-skeleton-title"
                  style="width:50%"
                />
                <ul
                  class="ezd-skeleton-paragraph"
                >
                  <li />
                  <li />
                </ul>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;
